# embedded_helper

./: CMakeLists.txt  README.md  app.c  bin_to_octalstr.c  endianness.c  reverse_str.c
.github/workflows/: cmake-multi-platform.yml
IPC/: CMakeLists.txt  shm_rw.c
algo/: search.cpp
bit_ops/: CMakeLists.txt  rotate_bits.c
boot/: Makefile  README.md  boot.ld  boot.s  endianness.c  lib.c  lib.s  script.sh  startup.s
companies/: count_int.c
docs/: idea.md
ds/: CMakeLists.txt  stack.c
ds/queue/: cqueue.c
inc/: app.h
leetcode/: 2sum.c  README.md  list_remove.c  max_subarray_sum.c
libs/: CMakeLists.txt  reg_call.c
libs/algo/: missing_number.cpp
libs/attr/: pack.c
libs/companies/: node_delete.c
libs/ds/: CMakeLists.txt
libs/ds/stack/: dtobconv_stack.c  reverse_string.c
libs/ds/tree/: lorder_tree.c
libs/inc/: eng.h  utils.h
libs/leetcode/: container_of_water.c  linklist_merge.c  list_reverse.c  list_swap.c
libs/utils/: CMakeLists.txt  container_of.c  conv_to_pointer.c  endianness.c  rev_num.c  sizeof.c  str_match.c
